#summary Release Notes

== Release 0.5.1 ==
  * Additional support for setKeyPropertyId so that the key can be used instead of the container index for
    the "Id" methods (indexOfId, isFirstId, isLastId, lastItemId, nextItemId, firstItemId, lastItemId, removeItem).
  * Fixes for setDetachedEntities when dealing with a tuple.
  * Removed final on BeanTupleContainer to allow extending methods. For example, one can control the sorting order
    of getItemIds.

== Release 0.5.0 ==
  * Added support for isDetachedEntities() as in LazyQueryContainer 1.2.8. If this parameter
    is set, the entities loaded are immediately detached, and a merge() is performed on
    update and remove.  Added corresponding constructors to BeanTupleQueryDefinition,
    CriteriaQueryDefinition and CriteriaContainer.
  * Improved caching of query size to avoid unnecessary calls to select count()
  * Improved defensive programming if asking to load empty or negative count of items.
  * Improved runtime error message if a CriteriaQueryDefinition is used on a BeanTupleContainer,
    since the conventions for property names are different and this can lead to hard to diagnose
    problems.

== Release 0.4.6 == 
  * CriteriaContainer now supports nested retrieval
        container.addContainerProperty("assignee.class",...);
        table.setVisibleColumn("assignee.class");
    The items of the container will then retrieve the value of assignee.getClass() when
    accessing the "assignee.class" property.
    Any string that can be understood by Jakarta PropertyUtils.getProperty can be
    used (e.g. person.address.zipcode or even person.children[0])
    However, there must be an accessor (getX() or isX()) for this to work.

== Release 0.4.5 ==
  * setKeyPropertyId() can be used to state that the container should return a key
    from the underlying data source instead of the index in the container. For example
    taskContainer.setKeyPropertyId("taskId") would return the taskId column.  This is 